# ouroboros

./: .gitignore  .travis.yml  LICENSE.txt  Makefile.am  README.md  configure.ac
doc/: example.conf  example.ini
src/: Makefile.am  config.c  config.h  debug.h  main.c  notify.c  notify.h  process.c  process.h  server.c  server.h
test/: Makefile.am  project-tree.tgz  test-config.c  test-ouroboros.sh
